Add visualize topics over time in Part 1, start Part 3

--- a/homework/hw2-goals-approaches/ve68/dvc.yaml
+++ b/homework/hw2-goals-approaches/ve68/dvc.yaml
@@ -17,3 +17,9 @@ stages:
         mtg.feather
     out:
       - multilabel.joblib
+  regression:
+    deps:
+      - regression.py
+        mtg.feather
+    out:
+      - regression.joblib
