--- a/homework/hw2-goals-approaches/ez/dvc.yaml
+++ b/homework/hw2-goals-approaches/ez/dvc.yaml
@@ -6,3 +6,9 @@ stages:
     - topic_model.py
     outs:
     - ft_model
+  multiclass:
+    cmd: python multiclass.py
+    deps:
+    - multiclass.py
+    outs:
+    - multiclass.sav
