--- a/homework/hw2-goals-approaches/ez/dvc.yaml
+++ b/homework/hw2-goals-approaches/ez/dvc.yaml
@@ -12,3 +12,9 @@ stages:
     - multiclass.py
     outs:
     - multiclass.sav
+  multilabel:
+    cmd: python multilabel.py
+    deps:
+    - multilabel.py
+    outs:
+    - multilabel.sav
