edit dvc.yaml to include part 3

--- a/homework/hw2-goals-approaches/ez/dvc.yaml
+++ b/homework/hw2-goals-approaches/ez/dvc.yaml
@@ -18,3 +18,10 @@ stages:
     - multilabel.py
     outs:
     - multilabel.sav
+  regression:
+    cmd: python regression.py
+    deps:
+    - regression.py
+    outs:
+    - linear.sav
+    - lasso.sav
