--- a/environment.yml
+++ b/environment.yml
@@ -7,12 +7,14 @@ dependencies:
   - python=3.9
   - ipykernel
   - dvc
-  - numpy
+  - numpy=1.21.5
   - seaborn
-  - scikit-learn
-  - pandas
+  - scikit-learn=1.0.2
+  - pandas=1.4.2
   - pyarrow
   - pip
+  - matplotlib=3.5.1
+  - regex = 2022.3.15
   - pip:
     - datatest
     - coconut-develop[kernel]
