Add yaml cause I forgot it

--- a/homework/hw2-goals-approaches/ve68/dvc.yaml
+++ b/homework/hw2-goals-approaches/ve68/dvc.yaml
@@ -19,7 +19,7 @@ stages:
     - ../../../data/mtg.feather
     - multilabel.py
     outs:
-    - multilabel.sav
+    - multilabel_pipe.sav
   regression:
     cmd: python regression.py
     deps:
