--- a/homework/hw2-goals-approaches/ve68/dvc.yaml
+++ b/homework/hw2-goals-approaches/ve68/dvc.yaml
@@ -31,3 +31,11 @@ stages:
     outs:
     - regression_elasticnet.sav
     - regression_lasso.sav
+  evaluate:
+    cmd: python evaluate.py
+    deps:
+    - ../../../data/mtg.feather
+    - evaluate.py
+    metrics:
+    - metrics.json:
+        cache: false
