I think dvc exp runs

--- a/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
+++ b/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
@@ -19,7 +19,7 @@ stages:
     cmd: python multilabel.py
     deps:
       - multilabel.py
-      - ../../../data/mtg.feathers
+      # - ../../../data/mtg.feathers
       - my_functions.py
     # outs:
     #   - multilabel.pkl
