added LinearSVC.penalty to dvc.yaml

--- a/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
+++ b/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
@@ -25,6 +25,7 @@ stages:
       - multilabel.pkl
     params:
       - LinearSVC.loss
+      - LinearSVC.penalty
     metrics:
       - metrics.json:
           cache: false
