added use_idf to params, reran multilabel.py. will dvc repro next

--- a/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
+++ b/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
@@ -25,7 +25,7 @@ stages:
       - multilabel.pkl
     params:
       - LinearSVC.loss
-      - LinearSVC.penalty
+      - TfidfTransformer.use_idf
 
     metrics:
       - metrics.json:
