added ngram to experiments

--- a/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
+++ b/homework/hw2-goals-approaches/hw2-cn490/dvc.yaml
@@ -26,6 +26,7 @@ stages:
     params:
       - LinearSVC.loss
       - TfidfTransformer.use_idf
+      - CountVectorizer.ngram_range
 
     metrics:
       - metrics.json:
