--- a/homework/hw2-goals-approaches/hw2-cn490/params.yaml
+++ b/homework/hw2-goals-approaches/hw2-cn490/params.yaml
@@ -2,4 +2,9 @@ LinearSVC:
   loss: squared_hinge
 
 TfidfTransformer:
-  use_idf: false
+  use_idf: true
+
+CountVectorizer:
+  ngram_range:
+    min_n: 1
+    max_n: 2
