--- a/homework/hw2-goals-approaches/hw2-ry/dvc.yaml
+++ b/homework/hw2-goals-approaches/hw2-ry/dvc.yaml
@@ -6,9 +6,6 @@ stages:
     - topic_model.py
     outs:
     - topic_model
-  multiclass_model:
-    cmd: '" -d" multiclass.py -d ../../../data/mtg.feather " -o" multiclass_model.sav
-      " python" multiclass.py ../../../data/mtg.feather'
   multilabel_model:
     cmd: '" -d" multilabel.py -d "../../../data/mtg.feather -o" multilabel_model.sav
       " python" multilabel.py ../../../data/mtg.feather'
@@ -19,3 +16,17 @@ stages:
     - rank_model.py
     outs:
     - reg_model.sav
+
+  multiclass_model:
+    cmd: python multiclass.py ../../../data/mtg.feather
+    deps:
+    - ../../../data/mtg.feather
+    - multiclass.py
+    params:
+    - tfidf.min_df
+    - tfidf.max_df
+    metrics:
+    - metrics.json
+      cache: false
+    outs:
+    - multilabel_model
