## Final commit after 2nd iteration
## Submitted the whole directory once after the 1st interation with n_gram range - (1,3). this is the second iteration commit with param changes(n_gram range-(1,1)).

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -2,11 +2,14 @@ stages:
   multiclass:
     cmd: python multiclass.py
     deps:
-    - multiclass.py
+      - multiclass.py
     outs:
-    - multiclass.sav
+      - multiclass.sav
     params:
       - preprocessing.ngrams
     metrics:
-      - metrics.json:
-          cache: false
+      - metrics1.json
+      - metrics2.json
+      - metrics1_diff.json
+      - metrics2_diff.json
+         
