--- a/environment.yml
+++ b/environment.yml
@@ -15,6 +15,7 @@ dependencies:
   - pip
   - matplotlib=3.5.1
   - regex = 2022.3.15
+  - scipy=1.8.0
   - pip:
     - datatest
     - coconut-develop[kernel]
