--- a/homework/hw2-goals-approaches/yaa46/dvc.yaml
+++ b/homework/hw2-goals-approaches/yaa46/dvc.yaml
@@ -1,25 +1,4 @@
 stages:
-  topic_model:
-    cmd: python topic_model.py ../../../data/mtg.feather
-    deps:
-    - ../../../data/mtg.feather
-    - topic_model.py
-    outs:
-    - my_model
-  multiclass:
-    cmd: python multiclass.py ../../../data/mtg.feather
-    deps:
-    - ../../../data/mtg.feather
-    - multiclass.py
-    outs:
-    - mtg_classifier.pkl
-  multilabel:
-    cmd: python multilabel.py ../../../data/mtg.feather
-    deps:
-    - ../../../data/mtg.feather
-    - multilabel.py
-    outs:
-    - mtg_classifier_multilabel.pkl
   regression:
     cmd: python regression.py ../../../data/mtg.feather
     deps:
@@ -27,3 +6,30 @@ stages:
     - regression.py
     outs:
     - regression.pkl
+    - regression_df.csv
+  topic_model:
+    cmd: python topic_model.py ../../../data/mtg.feather
+    deps:
+    - ../../../data/mtg.feather
+    - topic_model.py
+    outs:
+    - my_model
+  multilabel:
+    cmd: python multilabel.py ../../../data/mtg.feather
+    deps:
+    - ../../../data/mtg.feather
+    - multilabel.py
+    outs:
+    - mtg_classifier_multilabel.pkl
+  multiclass:
+    cmd: python multiclass.py ../../../data/mtg.feather
+    deps:
+    - ../../../data/mtg.feather
+    - multiclass.py
+    outs:
+    - mtg_classifier.pkl
+    params:
+    - tfidf.min_df
+    metrics:
+    - metrics.json:
+        cache: false
