--- a/homework/hw2-goals-approaches/yaa46/dvc.yaml
+++ b/homework/hw2-goals-approaches/yaa46/dvc.yaml
@@ -29,7 +29,7 @@ stages:
     outs:
     - mtg_classifier.pkl
     params:
-    - tfidf.min_df
+    - preprocessing.ngrams
     metrics:
     - metrics.json:
         cache: false
